--- a/style.css
+++ b/style.css
@@ -42,3 +42,26 @@ margin-left: 500px;
 .sections{
     padding: 100px;
 }
+.book {
+    cursor: pointer;
+}
+
+.book hr {
+    margin-bottom: 10px;
+}
+
+.modal-content {
+    margin-top: 100px;
+}
+
+.img_modal {
+    display: inline-block;
+} 
+
+.p_modal {
+    margin-top: 10px;
+}
+
+.modal-body {
+    text-align: center
+}
